[package]
name = "regex-ring"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-automata = { git = "https://github.com/s3bk/regex-automata",branch = "stream" }
